# privs

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  main.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
docs/: Makefile.am
include/: config.h  privs.h
man/: Makefile.am
